--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,14 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Ensure tags are available for semantic-release
+          fetch-tags: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -31,5 +34,6 @@ jobs:
       - name: Run python-semantic-release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           semantic-release -v version --push --vcs-release
